--- a/homework/index.html
+++ b/homework/index.html
@@ -16,8 +16,28 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script src="./index.js"></script>
+  <div id="root"></div><header><p>HYF Repository</p></header>
+      <select id="select"> </select>
+    </div>
+    <div id="container">
+      <div id="left-div"><table id="left-table"></table></div>
+      <div id="right-div"><table id="right-table"></table></div>
+    </div>
+    <script>
+      const xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+          const data = JSON.parse(this.responseText);
+          const select = document.getElementById('select');
+          select.innerHTML = data
+            .map((opt, i) => `<option value="${i}">${data[i].name}</option>`)
+            .join('');
+
+          xhttp.open('GET', 'https://api.github.com/orgs/HackYourFuture/repos?per_page=100', true);
+          xhttp.send();
+        }
+      };
+    </script>
 </body>
 
 </html>
